# DICOM-SIMULATOR-DESKTOP-APP

./: README copy.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
locales/: en.yaml  zh-CN.yaml
public/: platform-config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/database/: 000215.sst  000234.sst  000235.blob  000240.sst  000245.sst  IDENTITY  LOG.old.1726727382260734  MANIFEST-000247
src-tauri/resources/dcm/message/: MR_Modality.dcm
src-tauri/resources/python-script/: dicom_utils.py  my_script.py
src-tauri/src/: lib.rs  main.rs  models.rs  paths.rs  utils.rs  worklist.rs
src/layout/: index.vue
src/layout/components/lay-navbar/: index.vue
src/layout/components/lay-sidebar/: NavVertical.vue
src/router/modules/: home.ts
src/views/dicom/: index.vue
src/views/dicom/mpps/: PatientHeadless.vue  index.vue
src/views/dicom/mpps/components/: WorklistSet.vue
src/views/dicom/setting/: MimSetting.vue  WorklistSetting.vue
