[package]
name = "dicom-desktop"
version = "0.1.0"
description = "dicom-desktop"
authors = ["riusky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dicom_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-dialog = "2.0.0-rc"
hl7-mllp-codec = "0.4.0"
bytes = "1.5.0"
tokio-util = "0.7.10"
futures = "0.3.30"
rust-hl7 = "0.5.0"
chrono = "0.4.35"
reqwest = "0.11.26"
tauri-plugin-fs = "2.0.0-rc"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[tauri]
# Tauri 的核心配置
[tauri.allowlist]
fs = true # 允许文件系统访问
[tauri.fs.scope]
# 允许访问的路径，`$RESOURCE` 表示资源目录
read = ["$RESOURCE/*"]
write = ["$RESOURCE/database/*"]